# prostir-lviv-website

./: .gitignore  README.md
backend/: pyproject.toml
backend/api/: settings.py
backend/core/: admin.py  models.py  urls.py  views.py
backend/core/fixtures/: data.json
backend/core/migrations/: 0001_initial.py  0002_menuitem_movie.py
frontend/: vite.config.ts
frontend/src/: main.ts  router.ts  style.css
frontend/src/components/: footer.ts  header.ts
frontend/src/pages/: events.ts  home.ts  info.ts  menu.ts  movies.ts
