[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["liza"]
package-mode = false 

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.7"
pillow = "^12.0.0"
django-cors-headers = "^4.9.0"
cloudinary = "^1.44.1"
django-cloudinary-storage = "^0.3.0"
python-dotenv = "^1.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"